--- a/Demos/Buttons/Wisej.DemoBrowser.CheckBox/Features.resx
+++ b/Demos/Buttons/Wisej.DemoBrowser.CheckBox/Features.resx
@@ -117,6 +117,149 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="checkBoxDefault.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQRUZXh0
+        AyRBZAhMb2NhdGlvbgZBbmNob3IEU2l6ZQEBBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABZXaXNlai5XZWIuQW5jaG9yU3R5bGVzAgAAABNTeXN0ZW0u
+        RHJhd2luZy5TaXplAwAAAAIAAAAGBAAAAAVQaG9uZQYFAAAAB0RlZmF1bHQF+v///xhTeXN0ZW0uRHJh
+        d2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3aWR0aAZoZWlnaHQAAAAACAgICAMAAADkAQAAXgIAABwBAABD
+        AgAABfn///8UU3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAACAgDAAAADgEAAC0AAAAF+P///xZX
+        aXNlai5XZWIuQW5jaG9yU3R5bGVzAQAAAAd2YWx1ZV9fAAgCAAAABAAAAAX3////E1N5c3RlbS5EcmF3
+        aW5nLlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAyAAAABsAAAAL
+</value>
+  </data>
+  <data name="checkBox2.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQRUZXh0
+        AyRBZAhMb2NhdGlvbgZBbmNob3IEU2l6ZQEBBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABZXaXNlai5XZWIuQW5jaG9yU3R5bGVzAgAAABNTeXN0ZW0u
+        RHJhd2luZy5TaXplAwAAAAIAAAAGBAAAAAVQaG9uZQYFAAAAD0F1dG9DaGVjayBGYWxzZQX6////GFN5
+        c3RlbS5EcmF3aW5nLlJlY3RhbmdsZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAOQBAABy
+        AQAAHAEAAFcBAAAF+f///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAAOAQAAGQEA
+        AAX4////Fldpc2VqLldlYi5BbmNob3JTdHlsZXMBAAAAB3ZhbHVlX18ACAIAAAAEAAAABff///8TU3lz
+        dGVtLkRyYXdpbmcuU2l6ZQIAAAAFd2lkdGgGaGVpZ2h0AAAICAMAAADIAAAAGwAAAAs=
+</value>
+  </data>
+  <data name="checkBox3.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQcAAAAETmFtZQRUZXh0
+        AyRBZAhMb2NhdGlvbgZBbmNob3IEU2l6ZQlUZXh0QWxpZ24BAQQEBAQEGFN5c3RlbS5EcmF3aW5nLlJl
+        Y3RhbmdsZQMAAAAUU3lzdGVtLkRyYXdpbmcuUG9pbnQDAAAAFldpc2VqLldlYi5BbmNob3JTdHlsZXMC
+        AAAAE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAH1N5c3RlbS5EcmF3aW5nLkNvbnRlbnRBbGlnbm1lbnQD
+        AAAAAgAAAAYEAAAABVBob25lBgUAAAANQWxpZ25lZCBSaWdodAX6////GFN5c3RlbS5EcmF3aW5nLlJl
+        Y3RhbmdsZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAOQBAAA3AQAAHAEAABwBAAAF+f//
+        /xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAAOAQAAVAEAAAX4////Fldpc2VqLldl
+        Yi5BbmNob3JTdHlsZXMBAAAAB3ZhbHVlX18ACAIAAAAEAAAABff///8TU3lzdGVtLkRyYXdpbmcuU2l6
+        ZQIAAAAFd2lkdGgGaGVpZ2h0AAAICAMAAADIAAAAGwAAAAX2////H1N5c3RlbS5EcmF3aW5nLkNvbnRl
+        bnRBbGlnbm1lbnQBAAAAB3ZhbHVlX18ACAMAAAAgAAAACw==
+</value>
+  </data>
+  <data name="checkBox4.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQcAAAAETmFtZQRUZXh0
+        AyRBZAhMb2NhdGlvbgZBbmNob3IEU2l6ZQlUZXh0QWxpZ24BAQQEBAQEGFN5c3RlbS5EcmF3aW5nLlJl
+        Y3RhbmdsZQMAAAAUU3lzdGVtLkRyYXdpbmcuUG9pbnQDAAAAFldpc2VqLldlYi5BbmNob3JTdHlsZXMC
+        AAAAE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAH1N5c3RlbS5EcmF3aW5nLkNvbnRlbnRBbGlnbm1lbnQD
+        AAAAAgAAAAYEAAAABVBob25lBgUAAAAMQWxpZ25lZCBMZWZ0Bfr///8YU3lzdGVtLkRyYXdpbmcuUmVj
+        dGFuZ2xlBAAAAAF4AXkFd2lkdGgGaGVpZ2h0AAAAAAgICAgDAAAA5AEAAPwAAAAcAQAA4QAAAAX5////
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AgAAAAF4AXkAAAgIAwAAAA4BAACPAQAABfj///8WV2lzZWouV2Vi
+        LkFuY2hvclN0eWxlcwEAAAAHdmFsdWVfXwAIAgAAAAQAAAAF9////xNTeXN0ZW0uRHJhd2luZy5TaXpl
+        AgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAMgAAAAbAAAABfb///8fU3lzdGVtLkRyYXdpbmcuQ29udGVu
+        dEFsaWdubWVudAEAAAAHdmFsdWVfXwAIAwAAACAAAAAL
+</value>
+  </data>
+  <data name="checkBox5.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQcAAAAETmFtZQRUZXh0
+        AyRBZAhMb2NhdGlvbgZBbmNob3IEU2l6ZQlUZXh0QWxpZ24BAQQEBAQEGFN5c3RlbS5EcmF3aW5nLlJl
+        Y3RhbmdsZQMAAAAUU3lzdGVtLkRyYXdpbmcuUG9pbnQDAAAAFldpc2VqLldlYi5BbmNob3JTdHlsZXMC
+        AAAAE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAH1N5c3RlbS5EcmF3aW5nLkNvbnRlbnRBbGlnbm1lbnQD
+        AAAAAgAAAAYEAAAABVBob25lBgUAAAALQWxpZ25lZCBUb3AF+v///xhTeXN0ZW0uRHJhd2luZy5SZWN0
+        YW5nbGUEAAAAAXgBeQV3aWR0aAZoZWlnaHQAAAAACAgICAMAAADkAQAAwQAAABwBAACUAAAABfn///8U
+        U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAACAgDAAAADgEAAMoBAAAF+P///xZXaXNlai5XZWIu
+        QW5jaG9yU3R5bGVzAQAAAAd2YWx1ZV9fAAgCAAAABAAAAAX3////E1N5c3RlbS5EcmF3aW5nLlNpemUC
+        AAAABXdpZHRoBmhlaWdodAAACAgDAAAAyAAAAC0AAAAF9v///x9TeXN0ZW0uRHJhd2luZy5Db250ZW50
+        QWxpZ25tZW50AQAAAAd2YWx1ZV9fAAgDAAAAIAAAAAs=
+</value>
+  </data>
+  <data name="checkBox6.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQcAAAAETmFtZQRUZXh0
+        AyRBZAhMb2NhdGlvbgZBbmNob3IEU2l6ZQlUZXh0QWxpZ24BAQQEBAQEGFN5c3RlbS5EcmF3aW5nLlJl
+        Y3RhbmdsZQMAAAAUU3lzdGVtLkRyYXdpbmcuUG9pbnQDAAAAFldpc2VqLldlYi5BbmNob3JTdHlsZXMC
+        AAAAE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAH1N5c3RlbS5EcmF3aW5nLkNvbnRlbnRBbGlnbm1lbnQD
+        AAAAAgAAAAYEAAAABVBob25lBgUAAAAOQWxpZ25lZCBCb3R0b20F+v///xhTeXN0ZW0uRHJhd2luZy5S
+        ZWN0YW5nbGUEAAAAAXgBeQV3aWR0aAZoZWlnaHQAAAAACAgICAMAAADkAQAAdAAAABwBAABHAAAABfn/
+        //8UU3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAACAgDAAAADgEAABcCAAAF+P///xZXaXNlai5X
+        ZWIuQW5jaG9yU3R5bGVzAQAAAAd2YWx1ZV9fAAgCAAAABAAAAAX3////E1N5c3RlbS5EcmF3aW5nLlNp
+        emUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAyAAAAC0AAAAF9v///x9TeXN0ZW0uRHJhd2luZy5Db250
+        ZW50QWxpZ25tZW50AQAAAAd2YWx1ZV9fAAgDAAAAIAAAAAs=
+</value>
+  </data>
+  <data name="checkBox7.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQRUZXh0
+        AyRBZAhMb2NhdGlvbgZBbmNob3IEU2l6ZQEBBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABZXaXNlai5XZWIuQW5jaG9yU3R5bGVzAgAAABNTeXN0ZW0u
+        RHJhd2luZy5TaXplAwAAAAIAAAAGBAAAAAVQaG9uZQYFAAAABUltYWdlBfr///8YU3lzdGVtLkRyYXdp
+        bmcuUmVjdGFuZ2xlBAAAAAF4AXkFd2lkdGgGaGVpZ2h0AAAAAAgICAgDAAAAtQEAACMCAABKAQAACAIA
+        AAX5////FFN5c3RlbS5EcmF3aW5nLlBvaW50AgAAAAF4AXkAAAgIAwAAAD0BAABoAAAABfj///8WV2lz
+        ZWouV2ViLkFuY2hvclN0eWxlcwEAAAAHdmFsdWVfXwAIAgAAAAQAAAAF9////xNTeXN0ZW0uRHJhd2lu
+        Zy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAGsAAAAbAAAACw==
+</value>
+  </data>
+  <data name="checkBox8.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQRUZXh0
+        AyRBZAhMb2NhdGlvbgZBbmNob3IEU2l6ZQEBBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABZXaXNlai5XZWIuQW5jaG9yU3R5bGVzAgAAABNTeXN0ZW0u
+        RHJhd2luZy5TaXplAwAAAAIAAAAGBAAAAAVQaG9uZQYFAAAADUNoZWNrZWQgQ29sb3IF+v///xhTeXN0
+        ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3aWR0aAZoZWlnaHQAAAAACAgICAMAAADkAQAA6AEA
+        ABwBAADNAQAABfn///8UU3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAACAgDAAAADgEAAKMAAAAF
+        +P///xZXaXNlai5XZWIuQW5jaG9yU3R5bGVzAQAAAAd2YWx1ZV9fAAgCAAAABAAAAAX3////E1N5c3Rl
+        bS5EcmF3aW5nLlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAyAAAABsAAAAL
+</value>
+  </data>
+  <data name="checkBox9.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQRUZXh0
+        AyRBZAhMb2NhdGlvbgZBbmNob3IEU2l6ZQEBBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABZXaXNlai5XZWIuQW5jaG9yU3R5bGVzAgAAABNTeXN0ZW0u
+        RHJhd2luZy5TaXplAwAAAAIAAAAGBAAAAAVQaG9uZQYFAAAAC1RocmVlLVN0YXRlBfr///8YU3lzdGVt
+        LkRyYXdpbmcuUmVjdGFuZ2xlBAAAAAF4AXkFd2lkdGgGaGVpZ2h0AAAAAAgICAgDAAAA5AEAAK0BAAAc
+        AQAAkgEAAAX5////FFN5c3RlbS5EcmF3aW5nLlBvaW50AgAAAAF4AXkAAAgIAwAAAA4BAADeAAAABfj/
+        //8WV2lzZWouV2ViLkFuY2hvclN0eWxlcwEAAAAHdmFsdWVfXwAIAgAAAAQAAAAF9////xNTeXN0ZW0u
+        RHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAMgAAAAbAAAACw==
+</value>
+  </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
@@ -124,4 +267,14 @@
         U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAACw==
 </value>
   </metadata>
+  <data name="$this.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQIAAAAETmFtZQRTaXpl
+        AQQTU3lzdGVtLkRyYXdpbmcuU2l6ZQMAAAACAAAABgQAAAAFUGhvbmUF+////xNTeXN0ZW0uRHJhd2lu
+        Zy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAPICAACLAgAACw==
+</value>
+  </data>
 </root>
